--- a/website/PCD-website-2020/CMS/templates/partials/assets/media.html
+++ b/website/PCD-website-2020/CMS/templates/partials/assets/media.html
@@ -1,4 +1,4 @@
-<div id="media">
+<div id="media" style="padding: 0;">
   {% if page.images %}
     {% include 'partials/assets/images.html' %}
   {% endif %}
