--- a/website/PCD-website-2020/CMS/public/docs/css/screen.css
+++ b/website/PCD-website-2020/CMS/public/docs/css/screen.css
@@ -6,12 +6,11 @@ h2 a { border-bottom: 2px solid #999; }
 a { border-bottom: 1px solid #999; }
 
 /* Typography */
-
-body { font-family: "Times New Roman", times, serif; line-height: 1.3; }
+body { line-height: 1.3; }
 ul li, p, em, div.description { font-size: 13px; font-style: normal; }
-h1 { font-size: 13px; font-weight: normal; }
+h1 { font-weight: normal; }
 h1 strong { font-weight: normal; text-transform: none; display: block; letter-spacing: 0px; }
-h2 { font-size: 26px; margin: 0px; font-weight: normal; letter-spacing: 0.02em; }
+h2 {  margin: 0px; font-weight: normal; letter-spacing: 0.02em; }
 p.date { font-size: 11px; letter-spacing: 0.03em; }
 a { text-decoration: none; }
 p#project-count, p#gallery-count { text-align: right; }
