--- a/website/PCD-website-2020/CMS/templates/default.html
+++ b/website/PCD-website-2020/CMS/templates/default.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.name }} | Homepage </title>
     <link rel="alternate" type="application/atom+xml" href="{{ page.root_path }}/?/feed/">
     <link rel="stylesheet" href="{{ page.root_path }}/public/docs/css/screen.css" type="text/css" media="screen">
@@ -28,12 +29,21 @@
         visibility: visible;
       }
 
+      .reg {
+        float: right;
+      }
+
+      .sch {
+        min-height: 420px;
+      }
+
       .reg p {
         font-size: 13px;
       }
 
       #container {
         min-height: 42px;
+        max-width: 820px;
       }
 
       .logo-image {
@@ -54,6 +64,7 @@
         padding: 5px 20px;
         text-align: left;
         background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("{{ page.root_path }}/public/images/SAT.png");
+        max-width: 820px;
         width: 100%;
         height: 20%;
         background-position: center;
@@ -66,8 +77,8 @@
         margin: 0px auto;
         padding: 5px 20px;
         text-align: left;
-        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url("{{ page.root_path }}/public/images/venue-info-bg.jpg");
-        height: 50%;
+        float: left;
+        margin-left: 0;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -130,11 +141,116 @@
         flex-wrap:wrap;
         align-items:center;
       }
+
+      .maincontent{
+        margin: 0px auto;
+        padding: 5px 20px;
+        text-align: left;
+        max-width: 820px;
+      }
+
+      .opencall {
+        width: auto;
+      }
+
+      .opencall .col {
+        margin: 0px 0px 0px 20px;
+      }
+
+      .theme {
+        width: 60%;
+      }
+
+      .theme span {
+          padding: 0 10px;
+          float: none;
+      }
+
+      @media (max-width: 576px){
+        .hero-image {
+          padding: 0px;
+        }
+
+        .reg {
+          float: left;
+          margin-top: 20px;
+        }
+
+        .venue-image{
+          padding: 0px;
+          width: 100%;
+        }
+
+        .eight {
+          width: 100%;
+        }
+
+        .opencall{
+          width: 100%;
+        }
+
+        .opencall .col{
+          float: none;
+          padding-top: 100px;
+          margin: auto;
+        }
+
+        .sch {
+          width: 100%;
+          margin: 0px 50px 0px 0px;
+        }
+
+        .theme span {
+          text-align: left;
+          float: left;
+        }
+      }
+
+      @media (max-width: 780px){
+        .hero-image {
+          padding: 0px;
+        }
+
+        .reg {
+          float: left;
+          margin-top: 20px;
+        }
+
+        .venue-image{
+          padding: 0px;
+          width: 95%;
+        }
+
+        .eight {
+          width: 100%;
+        }
+
+        .opencall{
+          width: 100%;
+        }
+
+        .opencall .col{
+          padding-top: 100px;
+        }
+
+        .sch {
+          width: 340px;
+        }
+
+        .theme {
+          width: 80%;
+        }
+
+        .theme span {
+          padding: 0 10px;
+          float: none;
+        }
+      }
     </style>
   </head>
   <body>
 
-    <div id="container">
+    <div id="container" style="width: 100%;">
 
         <hr>
 
@@ -161,7 +277,7 @@
     <hr>
     <hr>
     <hr>
-    <div style = "margin: 0px auto;width: 860px;padding: 5px 20px;text-align: left;">
+    <div class="maincontent">
 
       <!-- INTO + HEADING -->
       <h1 style="font-size:32px;float: left;"> {{ page.heading }}</h1>
@@ -172,7 +288,8 @@
 
       <!-- EVENT + VENUE -->
       <hr class="dotted">
-      <div class="reg col three" style="float: right;margin-top: -20px;">
+      <img class="venue-image col seven" src="{{ page.root_path }}/public/images/venue-info-bg.jpg"></img>
+      <div class="reg col three">
         <h1 style="font-size:21px; margin-bottom: 4px;">Where</h1>
         <p style="font-size: 14px;">{{page.address}}</p>
         <h1 style="font-size:21px; margin-bottom: 4px;">Time</h1>
@@ -186,50 +303,69 @@
       </div>
 
 
-      <div class="col eight"  style="float: left; margin-left: 0; height: 300px;">
-         <div class="venue-image" src="{{ page.root_path }}/public/images/venue-info-bg.jpg" style="height: 300px;"></div>
-      </div>
-
       <!-- OPENCALL -->
       <hr>
       <hr class="dotted">
-      <div class="col three" style="margin: auto 30px;text-align: center;">
-        <div class="center" style="width: 128px; height: 128px; clip-path: polygon(50% 0%, 0% 100%, 100% 100%); background: #6C00B3;"></div>
-        <hr>
-        <hr>
-        <p>{{page.talks}}</p>
-        <div class="center">
-          <a href="https://docs.google.com/forms/d/172l1Xve6g0kq75DK4QiIuhr0ou1UgXiHvyHkId1G5a0/viewform" target="_blank">
-          <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
-            <h2 style="width: 100px;">OPEN CALL</h2>
-          </button>
-          </a>
+      <div class="opencall center">
+        <div class="col three" style="text-align: center;">
+          <div class="center" style="width: 128px;height: 128px; -webkit-clip-path: url(#talks-clip-path); clip-path: url(#talks-clip-path);background: #6C00B3;"></div>
+          <svg class="svg" width="0" height="0">
+            <clipPath id="talks-clip-path" clipPathUnits="objectBoundingBox">
+              <path d="M0.5,0 L1,1 H0"></path>
+            </clipPath>
+          </svg>
+          <hr>
+          <hr>
+          <h2>Talks</h2>
+          <hr>
+          <hr>
+          <p>{{page.talks}}</p>
+          <div class="center">
+            <a href="https://docs.google.com/forms/d/172l1Xve6g0kq75DK4QiIuhr0ou1UgXiHvyHkId1G5a0/viewform" target="_blank">
+            <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
+              <h2 style="width: 100px;">OPEN CALL</h2>
+            </button>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="col three" style="margin: auto 30px;text-align: center;">
-        <div class="center"  style="width: 128px; height: 128px; background: #6C00B3;"></div>
-        <hr>
-        <hr>
-        <p>{{page.workshops}}</p>
-        <div class="center">
-          <a href="https://docs.google.com/forms/d/1gO_Hgzxz0Cbp_7QDdirPtqLlKmrX1F3NvXCosKnlDKU/viewform" target="_blank">
-          <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
-            <h2 style="width: 100px;">OPEN CALL</h2>
-          </button>
-          </a>
+        <div class="col three" style="text-align: center;">
+          <div class="center"  style="width: 128px; height: 128px; background: #6C00B3;"></div>
+          <svg class="svg" width="0" height="0">
+          </svg>
+          <hr>
+          <hr>
+          <h2>Workshops</h2>
+          <hr>
+          <hr>
+          <p>{{page.workshops}}</p>
+          <div class="center">
+            <a href="https://docs.google.com/forms/d/1gO_Hgzxz0Cbp_7QDdirPtqLlKmrX1F3NvXCosKnlDKU/viewform" target="_blank">
+            <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
+              <h2 style="width: 100px;">OPEN CALL</h2>
+            </button>
+            </a>
+          </div>
         </div>
-      </div>
-      <div class="col three" style="margin: auto 30px;text-align: center;">
-        <div class="center"  style="width: 128px; height: 128px; clip-path: circle(50% at 50% 50%); background: #6C00B3;"></div>
-        <hr>
-        <hr>
-        <p>{{page.showcase}}</p>
-        <div class="center">
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSeROo7WArxJJ_euqQ5JupN3vga_vzkQb72szqCjbot3DG7Bzw/viewform" target="_blank">
-          <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
-            <h2 style="width: 100px;">OPEN CALL</h2>
-          </button>
-          </a>
+        <div class="col three" style="text-align: center;">
+          <div class="center"  style="width: 128px; height: 128px; -webkit-clip-path: url(#showcase-clip-path); clip-path: url(#showcase-clip-path); background: #6C00B3;"></div>
+          <svg class="svg" width="0" height="0">
+            <clipPath id="showcase-clip-path" clipPathUnits="objectBoundingBox">
+              <path d="M0.5,0.5 m-0.5,0 a0.5,0.5,0,1,0,1,0 a0.5,0.5,0,1,0,-1,0"></path>
+            </clipPath>
+          </svg>
+          <hr>
+          <hr>
+          <h2>Showcase</h2>
+          <hr>
+          <hr>
+          <p>{{page.showcase}}</p>
+          <div class="center">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeROo7WArxJJ_euqQ5JupN3vga_vzkQb72szqCjbot3DG7Bzw/viewform" target="_blank">
+            <button style="float:left; margin: 20px 0;border: 2px solid #6C00B3;background: #fff;color: black;padding: 10px 8px;">
+              <h2 style="width: 100px;">OPEN CALL</h2>
+            </button>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -243,17 +379,15 @@
         <div class="center" style="text-align:center;"><button disabled><h2>Get Tickets</h2></button><hr style="margin-bottom: 10px;"><p style="font-size: 12px;">Opens on 26th December</p></div>
       </div>
 
-
       <!-- THEME-->
       <hr>
       <hr class="dotted">
       <hr>
-      <div style="background: #6C00B3; color: #FFF; padding: 50px 0; text-align: center;">
-        <h3>/* Theme for PCD 2020 */</h3>
+      <div class="col five" style=" width: 95%; margin: 0; margin-left: 2%; background: #6C00B3; color: #FFF; padding: 50px 0; text-align: center;">
+        <h3>/* Themes for PCD 2020 */</h3>
         <br>
-        <p>{{page.themes}}</p>
+        <div class="theme center">{{page.themes}}</div>
       </div>
-
 
       <!-- Schedule -->
       <hr>
@@ -263,24 +397,27 @@
         <div style="display: inline-block; float: left;"><h2>Program Schedule</h2></div>
         <div style="display: inline-block; float: right;"><p style="padding-top: 10px;">01/02 Feb</p></div>
         <hr style="margin-bottom: 16px;">
-        <div class="col five" style="min-height: 420px;margin: 0px 50px 0px 0px;">
+        <div class="sch col five">
           <h3 style="background:  #6C00B3; color: #fff; padding: 8px 16px;">Day One First half</h3>
           <p style="padding: 8px 16px;">{{page.dayonefirstschedule}}</p>
         </div>
-        <div class="col five" style="min-height: 420px;margin: 0px 50px 0px 0px;">
+        <div class="sch col five">
           <h3 style="background:  #6C00B3; color: #fff; padding: 8px 16px;">Day One Second half</h3>
           <p style="padding: 8px 16px;">{{page.dayonesecondschedule}}</p>
         </div>
-        <div class="col five" style="min-height: 420px;margin: 0px 50px 0px 0px;">
+        <div class="sch col five">
           <h3 style="background:  #6C00B3; color: #fff; padding: 8px 16px;">Day Two First half</h3>
           <p style="padding: 8px 16px;">{{page.daytwofirstschedule}}</p>
         </div>
-        <div class="col five" style="min-height: 420px;margin: 0px 50px 0px 0px;">
+        <div class="sch col five">
           <h3 style="background:  #6C00B3; color: #fff; padding: 8px 16px;">Day Two Second half</h3>
           <p style="padding: 8px 16px;">{{page.daytwosecondschedule}}</p>
         </div>
       </div>
       <hr class="dotted">
+      <footer>
+        <a href="mailto:pcddelhi@gmail.com" target="_blank" style="cursor: pointer;">Contact Us</a>
+      </footer>
 
     </div>
     <hr>
