--- a/website/PCD-website-2020/CMS/templates/default.html
+++ b/website/PCD-website-2020/CMS/templates/default.html
@@ -2,13 +2,35 @@
   "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
+
     <meta http-equiv="Content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="{{ page.name }}">
+    <meta property="og:image" content="{{ page.root_path }}/public/images/pcd_banner.png">
+    <meta property="og:description" content="Processing Community Day (PCD) is an initiative to celebrate Art, Code and Diversity, worldwide.  We welcome artists, educators, hobbyists, creative technologists, scientists, designers, researchers to participate in the two-day event. It could be through giving a talk, showcasing your work or conducting a workshop.">
+    <meta property="og:url" content="https://processingindia.org/delhi/index.html">
+    <meta name="twitter:card" content="summary_large_image">
+
     <title>{{ page.name }} | Homepage </title>
     <link rel="alternate" type="application/atom+xml" href="{{ page.root_path }}/?/feed/">
     <link rel="stylesheet" href="{{ page.root_path }}/public/docs/css/screen.css" type="text/css" media="screen">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/p5@0.5.16/lib/p5.min.js" type="text/javascript"></script>
     <style type="text/css">
+
+      #defaultCanvas0{
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: -1;
+      }
+
+      .credits {
+        font-size: 0.8rem;
+        display: inline;
+        text-align: center;
+      }
+
       @font-face {
         font-family: 'Avenir';
         src: url("public/fonts/AvenirLTStd-Book.woff") format("woff"), url("public/fonts/AvenirLTStd-Book.ttf")  format("truetype");
@@ -22,6 +44,14 @@
 
       p {
         font-size: 16px;
+      }
+
+      .withfilter{
+        filter: grayscale(1);
+      }
+
+      .withfilter:hover {
+        filter: none;
       }
 
       hr.dotted {
@@ -59,11 +89,19 @@
         position: relative;
       }
 
+      .logo-text{
+        padding:0;
+        height:140px;
+        font-size: 44px;
+        padding-top: 50px;
+        padding-left: 140px;
+        color: #6C00B3;
+      }
+
       .hero-image {
         margin: 0px auto;
         padding: 5px 20px;
         text-align: left;
-        background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)), url("{{ page.root_path }}/public/images/SAT.png");
         max-width: 820px;
         width: 100%;
         height: 20%;
@@ -71,6 +109,14 @@
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
+      }
+
+      .hero-text {
+        text-align: center;
+        position: absolute;
+        color: white;
+        width: 100%;
+        bottom: 0;
       }
 
       .venue-image {
@@ -83,6 +129,11 @@
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
+      }
+
+      .itsday_title{
+        color: #6C00B3;
+        filter: grayscale(1);
       }
 
       button {
@@ -147,6 +198,7 @@
         padding: 5px 20px;
         text-align: left;
         max-width: 820px;
+        background: white;
       }
 
       .opencall {
@@ -255,8 +307,8 @@
         <hr>
 
         <a href="{{ page.root_path }}">
-            <div class="logo-image" style="margin-right: 45%;">
-            <div style="padding:0;height:140px;height: 140px;font-size: 44px;padding-top: 50px;padding-left: 140px;color: #6C00B3;">Delhi</div>
+            <div id="_logo_image" class="logo-image" style="margin-right: 45%;">
+            <div id="_logo_text" class="logo-text">Delhi</div>
             </div>
         </a>
 
@@ -270,7 +322,13 @@
     <!-- BANNER -->
     <hr>
     <hr>
-    <div class="hero-image"></div>
+    <!--div class="hero-image"></div-->
+    <div class="hero-image">
+      <div class="hero-text" >
+        <h1 style="font-size: 3em;"><strong id="_title" class="itsday_title">Science + Art + Technology</strong></h1>
+        </div>
+      </div>
+    </div>
 
 
     <!-- CONTENT -->
@@ -376,7 +434,15 @@
 
       <div>
         <h1 style="color: #6C00B3; text-align: center;">{{page.focused}}</h1>
-        <div class="center" style="text-align:center;"><button disabled><h2>Get Tickets</h2></button><hr style="margin-bottom: 10px;"><p style="font-size: 12px;">Opens on 26th December</p></div>
+        <a href="https://forms.gle/k8GQmiWVwKHSiGee7" target="_blank">
+          <div class="center" style="text-align:center;">
+            <button>
+              <h2>Register</h2>
+            </button>
+            <hr style="margin-bottom: 10px;">
+            <p style="font-size: 12px;">Early bird free registrations are open now!</p>
+          </div>
+        </a>
       </div>
 
       <!-- THEME-->
@@ -415,11 +481,42 @@
         </div>
       </div>
       <hr class="dotted">
-      <footer>
-        <a href="mailto:pcddelhi@gmail.com" target="_blank" style="cursor: pointer;">Contact Us</a>
+      <footer style="text-align: center;background: white;min-height: 50px;">
+        <a href="mailto:pcddelhi@gmail.com" target="_blank" style="cursor: pointer;float: left;">Contact Us</a>
+        <p class="credits" style="float: right;">
+          <a class="credits__link" href="https://www.openprocessing.org/sketch/494102"> perlin noise sketch</a>
+          by
+          <a class="credits__link" href="https://www.openprocessing.org/user/111178"> yasai </a>
+        </p>
+
+        <div id="share-buttons-container" style="position: relative;">
+          <div id="share-buttons-block" style="margin: 0;position: absolute;top: 50%;left: 50%;margin-right: -50%;transform: translate(-50%, -50%);" >
+
+          <!-- Email -->
+          <a href="mailto:?&subjectPCD2020=&body=https://processingindia.org/delhi Join me at #PCD2020 in Delhi on 1st Feb -- https://processingindia.org/delhi" style="text-decoration: none;">
+              <img class="withfilter" style="width: 35px;padding: 5px;border: 0;box-shadow: 0;display: inline;" src="https://simplesharebuttons.com/images/somacro/email.png" alt="Email" />
+          </a>
+
+          <!-- Facebook -->
+          <a href="https://www.facebook.com/sharer/sharer.php?u=https://processingindia.org/delhi" target="_blank" style="text-decoration: none;">
+              <img class="withfilter" style="width: 35px;padding: 5px;border: 0;box-shadow: 0;display: inline;" src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
+          </a>
+
+          <!-- LinkedIn -->
+          <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://processingindia.org/delhi&title=&summary=Join me at #PCD2020 in Delhi on 1st Feb -- https://processingindia.org/delhi&source=" target="_blank" style="text-decoration: none;">
+              <img class="withfilter" style="width: 35px;padding: 5px;border: 0;box-shadow: 0;display: inline;" src="https://simplesharebuttons.com/images/somacro/linkedin.png" alt="LinkedIn" />
+          </a>
+
+          <!-- Twitter -->
+          <a href="https://twitter.com/home?status=https://processingindia.org/delhi Join me at #PCD2020 in Delhi on 1st Feb -- https://processingindia.org/delhi" target="_blank" style="text-decoration: none;">
+              <img class="withfilter" style="width: 35px;padding: 5px;border: 0;box-shadow: 0;display: inline;" src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
+          </a>
+        </div>
       </footer>
 
     </div>
     <hr>
+
+    <script src="{{ page.root_path }}/public/docs/js/opSketch.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
